2005-08-15  Akkana Peck  <akkana@cvs.gnome.org>
	* app/actions/image-actions.c
	* app/tools/gimpaligntool.c
	* menus/image-menu.xml.in
	* plug-ins/common/AlienMap2.c
	* plug-ins/common/autostretch_hsv.c
	* plug-ins/common/borderaverage.c
	* plug-ins/common/c_astretch.c
	* plug-ins/common/ccanalyze.c
	* plug-ins/common/channel_mixer.c
	* plug-ins/common/color_enhance.c
	* plug-ins/common/colorify.c
	* plug-ins/common/colortoalpha.c
	* plug-ins/common/compose.c
	* plug-ins/common/decompose.c
	* plug-ins/common/exchange.c
	* plug-ins/common/fp.c
	* plug-ins/common/gradmap.c
	* plug-ins/common/hot.c
	* plug-ins/common/mapcolor.c
	* plug-ins/common/max_rgb.c
	* plug-ins/common/normalize.c
	* plug-ins/common/retinex.c
	* plug-ins/common/sample_colorize.c
	* plug-ins/common/semiflatten.c
	* plug-ins/common/smooth_palette.c
	* plug-ins/common/vinvert.c
	* plug-ins/rcm/rcm.c
	* plug-ins/script-fu/scripts/hsv-graph.scm: Move all color-related
	functions from the Image and Filters menus to a new toplevel
	Colors menu (as discussed in bug 116145).

2005-08-16  Sven Neumann  <sven@gimp.org>

	* configure.in: define G_DISABLE_DEPRECATED unless glib >= 2.9.0.

	* app/core/gimpscanconvert.c: added missing include.

	* app/text/gimp-fonts.c 
	* libgimp/gimp.c 
	* libgimpwidgets/gimpcolornotebook.c
	* plug-ins/helpbrowser/dialog.c: fixed signedness warnings.

	* plug-ins/bmp/bmpread.c (ReadBMP): initialize variable.

2005-08-15  Manish Singh  <yosh@gimp.org>

	* configure.in: fix reversed libgnomeui conditional test for
	the AC_DEFINE.

2005-08-16  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/tga.c
	* plug-ins/common/threshold_alpha.c
	* plug-ins/common/tiff.c
	* plug-ins/common/tile.c
	* plug-ins/common/tileit.c
	* plug-ins/common/tiler.c
	* plug-ins/common/uniteditor.c
	* plug-ins/common/unsharp.c
	* plug-ins/common/video.c
	* plug-ins/common/vinvert.c
	* plug-ins/common/vpropagate.c
	* plug-ins/common/warp.c
	* plug-ins/common/waves.c
	* plug-ins/common/webbrowser.c