@@ -20,13 +20,6 @@ libexec_PROGRAMS = uri
 
 if HAVE_GNOMEVFS
 backend_sources = uri-backend-gnomevfs.c
-if HAVE_GNOMEUI
-backend_cflags = $(GNOMEVFS_CFLAGS) $(GNOMEUI_CFLAGS)
-backend_libs = $(GNOMEVFS_LIBS) $(GNOMEUI_LIBS)
-else
-backend_cflags = $(GNOMEVFS_CFLAGS)
-backend_libs = $(GNOMEVFS_LIBS)
-endif
 else
 backend_sources = uri-backend-wget.c
 endif
@@ -38,8 +31,8 @@ uri_SOURCES = \
 
 INCLUDES = \
 	-I$(top_srcdir)		\
+	$(URI_CFLAGS)		\
 	$(GTK_CFLAGS)		\
-	$(backend_cflags)	\
 	-I$(includedir)
 
 LDADD = \
@@ -50,7 +43,7 @@ LDADD = \
 	$(libgimp)		\
 	$(libgimpcolor)		\
 	$(libgimpbase)		\
+	$(URI_LIBS)		\
 	$(GTK_LIBS)		\
-	$(backend_libs)		\
 	$(RT_LIBS)		\
 	$(INTLLIBS)
